--- a/Hajar-work/pfa_lversion/index.html
+++ b/Hajar-work/pfa_lversion/index.html
@@ -31,7 +31,7 @@
                         <a href="#events">EVENTS</a>
                     </li>
                     <li>
-                        <div id="login"><a href="pages/login.html">LOGIN</a></div>
+                        <div id="login"><a href="pages/login.php">LOGIN</a></div>
                     </li>
                 </ul>
             </nav>
@@ -74,7 +74,7 @@
         </section>
 
         <div class="signe-in">
-            <a href="pages/register.html">
+            <a href="pages/register.php">
                 <div>signe in !</div>
             </a>
         </div>
